tests/diagnostics/cases/types/14_undefined_variable.home
// Undefined variable referenced in a binary expression.
fn main() {
    let x = y + 1
}
